# Narrium

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: AUDIT_EPIC_6_TO_7.md  BACKLOG_SCENE_NAVIGATION.md  CHANGELOG.md  DATA_MODEL.md  DESKTOP_ARCHITECTURE.md  EPIC10_SCENE_GROUPS.md  EPIC9_VALIDATION.md  ROADMAP.md  SCREENS.md  STORY_LOGIC.md
docs/reviews/: DESKTOP_ARCHITECTURE_REVIEW_2026-07.md  FULL_CODE_REVIEW_2026-07.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.test.ts  App.tsx  AppJsonExport.test.tsx
src/components/: AppShell.test.tsx  AppShell.tsx  ConfirmationDialog.tsx  RightSidebar.tsx  index.ts
src/store/: projectHistory.test.ts  projectHistory.ts  projectMigrations.test.ts  projectMigrations.ts  unsavedChanges.test.ts  unsavedChanges.ts  useCanvasStore.test.ts  useCanvasStore.ts  useProjectViewStore.ts  workspaceProjectFile.test.ts  workspaceStore.test.ts  workspaceStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: projectExport.ts  projectImport.test.ts  projectImport.ts  standaloneHtmlExport.test.ts  standaloneHtmlExport.ts
story/szept/: art_architecture_guidelines.md  art_bible.md  art_generation_notes.md  art_prop_guidelines.md  art_scene_guidelines.md  continuations.md  expanded_story_outline.md  scene_generation_roadmap.md  story.md  whisper-beneath-the-lighthouse-expanded_import.json
(+125 files in other folders)
