[package]
name = "narrium"
version = "0.1.0"
description = "Narrium desktop shell"
authors = ["Narrium"]
edition = "2021"

[lib]
name = "narrium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
